--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
       <p>
         "StartCodingNow" began as a collaborative project for our IT course at Concordia University. As a group of diverse and ambitious students, we wanted to create something impactful that would help beginners in coding. We believe technology is the cornerstone of innovation, and our goal is to make learning it accessible to everyone.
       </p>
-      <img src="team-photo.jpg" alt="Our Team">
+      
     </div>
   </section>
 
@@ -79,7 +79,13 @@
       </div>
     </div>
   </section>
-
+  <section class="cta">
+    <div class="container">
+      <h2>Ready to Start Coding?</h2>
+      <p>Join our community and take the first step towards building your future in tech.</p>
+      <a href="courses.html" class="cta-button">Explore Courses</a>
+    </div>
+  </section>
   <!-- Footer Section -->
   <footer>
     <div class="footer-container">
